Used some newer java features.